tests/testcases/errors/BCE0022-11.boo
"""
BCE0022-11.boo(5,21): BCE0022: Cannot convert 'null' to 'single'.
"""
class Foo:
	bar as single = null
